--- a/data_folder/plain_text_resume.yaml
+++ b/data_folder/plain_text_resume.yaml
@@ -1,16 +1,16 @@
 personal_information:
-  name: "[Your Name]"
-  surname: "[Your Surname]"
-  date_of_birth: "[Your Date of Birth]"
-  country: "[Your Country]"
-  city: "[Your City]"
-  address: "[Your Address]"
-  zip_code: "[Your zip code]"
-  phone_prefix: "[Your Phone Prefix]"
-  phone: "[Your Phone Number]"
-  email: "[Your Email Address]"
-  github: "[Your GitHub Profile URL]"
-  linkedin: "[Your LinkedIn Profile URL]"
+  name: "Roderick"
+  surname: "Roco"
+  date_of_birth: "9/10/1992"
+  country: "Chile"
+  city: "Santiago"
+  address: "La Florida"
+  zip_code: "123456789"
+  phone_prefix: "+569"
+  phone: "20112241"
+  email: "Roderickroco@gmail.com"
+  github: "https://github.com/radagesth"
+  linkedin: "https://www.linkedin.com/in/roderick-roco-cristi-8003761bb/"
 
 education_details:
   - education_level: "[Your Education Level]"
